--- a/TypeGame/TypeGame.vcxproj.filters
+++ b/TypeGame/TypeGame.vcxproj.filters
@@ -35,7 +35,7 @@
     <ClCompile Include="src\main.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="loader.c">
+    <ClCompile Include="src\loader.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
